fixed footer spacing

--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -36,7 +36,7 @@ footer#site-footer {
             max-width: $max-width;
             margin:auto;
             display:flex;
-            align-items: center;
+            //align-items: center;
             justify-content: space-between;
             padding: 20px;
 
